WIP - ScoreKeeper - now pretty good replacement for old ScoreKeeperXL app

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <ul>
       <li><a href="./ScoreMore">ScoreMore</a>
       <li><a href="./JustScore">JustScore</a>
+      <li><a href="./ScoreKeeper">ScoreKeeper</a>
   </body>
 </html>
